# Lernplaner

./: .env.example  .gitignore  ARCHITECTURE.md  CONTEXT.md  CONTRIBUTING.md  DATA_MODEL.md  DECISIONS.md  DESIGN.md  PRODUCT.md  README.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
scripts/: Install.command  analyze-material.ts  moodle-spike.ts  preview-import.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/ai/: anthropicProvider.ts  index.ts  openaiProvider.ts  types.ts
src/data/: aiUsageRepo.ts  answersRepo.ts  assessments.ts  assessmentsRepo.ts  availability.ts  availabilityRepo.ts  cardsRepo.ts  courseExport.ts  courseGroups.ts  courseGroupsRepo.ts  courses.ts  coursesRepo.ts  db.ts  documentsRepo.ts  importTopics.ts  paperSteps.ts  paperStepsRepo.ts  planVersions.ts  planVersionsRepo.ts  questionsRepo.ts  quizzesRepo.ts  recurringBlockers.ts  recurringBlockersRepo.ts  reviewsRepo.ts  schema.ts  studyBlocks.ts  studyBlocksRepo.ts  topicSectionsRepo.ts  topicTree.ts  topicsRepo.ts
src/domain/: capacity.ts  errorHistory.ts  estimation.ts  examWeighting.ts  notifications.ts  planBuilder.ts  progress.ts  quiz.ts  replanning.ts  scheduling.ts  spacedRepetition.ts
src/ingest/: chapters.ts  docType.ts  documentImport.ts  docx.ts  extract.ts  headingStructure.ts  markdown.ts  pdf.ts  pptx.ts  slides.ts  types.ts  xlsx.ts
src/platform/: updater.ts  (+5 more)
(+125 files in other folders)
