[package]
name = "lernplaner"
version = "0.10.0"
description = "Lernplanungs-App, die Vorlesungsmaterial inhaltlich versteht und daraus einen sich selbst anpassenden Lernplan erzeugt"
authors = ["Henri Grimme", "theodorklink"]
license = ""
repository = "https://github.com/henrigrimme/Lernplaner"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
keyring = "3"
